# glue-prompt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.cursor/rules/: 0-c-attitude.mdc  0-c-persona.mdc  0-c-styleguide.mdc
.github/workflows/: python-app.yml
examples/: api_usage.py  basic_usage.py
glueprompt/: __init__.py  client.py  config.py  differ.py  exceptions.py  loader.py  logging.py  registry.py  renderer.py  repo_manager.py  validator.py  versioning.py
glueprompt/cli/: __init__.py  commands.py
glueprompt/models/: __init__.py  prompt.py  version.py
glueprompt/server/: __init__.py  app.py  models.py  worktree_manager.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_differ.py  test_loader.py  test_loader_extended.py  test_models.py  test_registry.py  test_registry_extended.py  test_renderer.py  test_renderer_extended.py  test_repo_manager.py  test_server_app.py  test_validator.py  test_validator_extended.py  test_versioning.py  test_worktree_manager.py
